//
// Copyright 2024 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

message CursorPaginationResponse {
  string next_cursor = 1;
}

message CursorPaginationRequest {
  string cursor = 1;
  // Limit pagination to 100
  int32 limit = 3 [
    (buf.validate.field).int32 = {
      gte: 2,
      lte: 100
    },
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED
  ];
}

// OffsetPaginationRequest is used to paginate the results
message OffsetPaginationRequest {
  // The (zero-based) offset of the first item returned in the collection.
  int32 page = 1 [(buf.validate.field).int32.gte = 1];
  // The maximum number of entries to return. If the value exceeds the maximum, then the maximum value will be used.
  int32 page_size = 2 [(buf.validate.field).int32.gt = 0, (buf.validate.field).int32.lte = 100];
}

// OffsetPaginationResponse is used to return the pagination information
message OffsetPaginationResponse {
  // The current page number
  int32 page = 1;
  // The number of results per page
  int32 page_size = 2;
  // The total number of results
  int32 total_count = 3;
  // The total number of pages
  int32 total_pages = 4;
}
